--- a/blocks/popup-view/__leaf/popup-view__leaf.css
+++ b/blocks/popup-view/__leaf/popup-view__leaf.css
@@ -12,3 +12,12 @@
 .popup-view__leaf:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
+
+
+@media screen and (max-width: 730px) {
+  .popup-view__leaf {
+    padding-left: 24px;
+    margin: 0;
+    font-size: 15px;
+  }
+}
