--- a/blocks/card-item/card-item.css
+++ b/blocks/card-item/card-item.css
@@ -4,6 +4,7 @@
   background-color: rgba(88, 165, 255, 0.31);
   border: 3px solid rgba(0, 0, 0, .2);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
