--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,7 @@
 @import url(../blocks/card-item/__title/card-item__title.css);
 @import url(../blocks/card-item/__text/card-item__text.css);
 @import url(../blocks/card-item/__image/card-item__image.css);
+@import url(../blocks/card-item/__info/card-item__info.css);
 
 @import url(../blocks/footer/footer.css);
 
